feat: add bookmarkedmovies get req
