# src/routes/user-router.ts
@@ -2,7 +2,7 @@ import {
   getAllMovies,
   sendBookmarkedMovies,
 } from "../controllers/movies-controller.js";
-import { createUser, login } from "../controllers/user-controller.js";
+import { createUser, getBookMarkedMovies, login } from "../controllers/user-controller.js";
 import express from "express";
 
 const userRouter = express.Router();
@@ -11,5 +11,6 @@ userRouter.post("/register", createUser);
 userRouter.post("/login", login);
 userRouter.get("/movies", getAllMovies);
 userRouter.post("/sendBookmarkedMovies", sendBookmarkedMovies);
+userRouter.get("/bookMarkedMovies/:id", getBookMarkedMovies);
 
 export default userRouter;
